# stethoscope

./: .editorconfig  .env  .gitignore  Cargo.toml  Makefile  README.md
.cursor/rules/: best-practice.mdc  coding-style.mdc  contex7.mdc  dependencies.mdc  general.mdc
config/: test.toml
pulse/: .env  Cargo.toml  Makefile
pulse/config/: test.toml
pulse/src/: agent.rs  broker.rs  config.rs  controller.rs  logger.rs  main.rs  message.rs  runnable.rs  task.rs  waiting_pool.rs  worker.rs
pulse/src/agent/: aggregator.rs  dispatcher.rs  mod.rs  reporter.rs  runnable.rs  worker.rs
pulse/src/agent/report_executor/: executor.rs  mod.rs  stdio.rs
pulse/src/agent/reporter/: aggregator.rs  executor.rs  mod.rs  rootly.rs  stdio.rs  stdout.rs
pulse_proc_macros/: Cargo.toml
pulse_proc_macros/src/: lib.rs
src/: broker.rs  config.rs  endpoint_provider.rs  logger.rs  main.rs  pulse.rs  worker_pool.rs
src/agent/: worker.rs
src/agent/reporter/: mod.rs  proxy.rs
src/reporters/: file.rs  mod.rs  stdout.rs
ui/static/: index.html
ui/static/scss/: style.css  style.css.map  style.scss
web/: Cargo.toml
