[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }
tokio = { version = "1.44.1", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.88"
env_logger = "0.11.8"
log = "0.4.27"
console-subscriber = "0.4.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.5.0"
httptest = "0.16.3"
