[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15" }
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.88"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
humantime = "2.2.0"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
pulse_proc_macros = { path = "../pulse_proc_macros" }
thiserror = "2.0.12"
rand = "0.9.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
httptest = "0.16.3"
mockall = "0.13.1"
